Changed project structure, configured vagrant